css/main.css
body {
  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
  color: rgb(95, 97, 92);
  text-shadow: 0.5px 0.5px 10px rgba(110, 110, 119, 0.74);
  
  background-color: rgb(250, 232, 200);
}

.mainbackground{
  position: absolute;
  top: 0;
  left: 0;
  background-image: url("/image/Background.png");
  display: flex;
  align-items: center;
  background-size: cover;
  width: 100%;
  height: 750px;
  z-index: -5;
}

.rectclass1, .rectclass2, .rectclass3, .rectclass4{
  position: absolute;
  display:inline;
  background-size: cover;
}
.rectclass1 {
  top: 150px;
  left: 0;
  z-index: -1;
}
.rectclass2 {
  top: 0;
  right: 0;
  z-index: -2;
}
.rectclass3 {
  top: 1250px;
  left: 0;
  z-index: -3;
}
.rectclass4 {
  top: 750px;
  right: 0;
  z-index: -4;
}


.header{  
  position: fixed;
  display: flex;
  top: -10px;
  height: 50px;
  width: 400px;
  font-size: 16px;
  align-items: center;
  justify-content: center;
  left: 50%;
  margin-left: -200px;
  backdrop-filter: blur(20px);
  box-shadow: 0.5px 0.5px 10px 1px rgba(58, 56, 44, 0.5);
  border-radius: 10px;
  transition: visibility 0s, opacity 0.5s linear;
}
.header p {
  backdrop-filter: blur(10px);
  padding-left: 50px;
  padding-right: 50px;
  transition: all 0.5s;
}


.title {
  margin: 0px;
  padding: 0px;
  font-size: 2rem;
  display: flex;
  justify-content:center;
}
.title h1 {
  overflow:hidden;
  backdrop-filter: blur(10px);
  box-shadow: 0.5px 0.5px 10px 1px rgba(58, 56, 44, 0.5);
  border-radius: 10px;
  padding: 3rem;
  transition: all 2s;
}

.infoscreen {
    font-size: 1rem;
    text-align: center;
    
}

.infoscreen h2{
  overflow:hidden;
  backdrop-filter: blur(10px);
  box-shadow: 0.5px 0.5px 10px 1px rgba(58, 56, 44, 0.5);
  border-radius: 10px;
  backdrop-filter: blur(10px);
  background-color: rgba(240, 255, 255, 0.4);
  transition: all 0.5s;
}


.projects{
  padding: 1%;
}

.infotext{
  overflow:hidden;
  backdrop-filter: blur(10px);
  box-shadow: 0.5px 0.5px 10px 1px rgba(58, 56, 44, 0.5);
  border-radius: 20px;
  margin-bottom: 7%;
  margin-left: 20%;
  margin-right: 20%;
  transition: all 0.5s;
}


.infotext img {
  z-index: 0;
  position:sticky;
  margin: 2%;
  width: 30%;
  border-radius: 10px;
  box-shadow: 0.5px 0.5px 5px 0.5px rgba(58, 56, 44, 0.5);
  transition: all 0.5s;
  
}

.infotextimg{
  z-index: 1;
  position: absolute;
  top:100px;
  left: 0px;
  right: 0px;       
  text-align: center;
  visibility:hidden;
}

.header p:hover, .title h1:hover {
    color: rgba(124, 115, 97, 0.89);
    text-shadow: 0px 0px 40px rgba(233, 233, 238, 7.5);
}

.infotext:hover {
  color: rgba(58, 51, 51, 0.89);
  text-shadow: 0px 0px 30px rgba(233, 233, 238, 7.5);
  background-color: rgba(106, 116, 116, 0.4);
}

.infoscreen h2:hover {
  color: rgba(102, 91, 91, 0.89);
  text-shadow: 0px 0px 30px rgba(233, 233, 238, 7.5);
  background-color: rgba(162, 177, 177, 0.4);
}

.infotextimg:hover, .infotext img:hover {
  filter:blur(1px) grayscale(50%);
  text-shadow: 0px 0px 30px rgba(233, 233, 238, 7.5);
  width: 32%;
  margin: 1.35%;
  visibility:visible;
}

@media screen and (min-width: 1500px) {
  body {
    color: rgb(61, 61, 60);
  }
  .title h1 {
    backdrop-filter: blur(0px);
    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0) 50%, rgba(194, 185, 166, 0) 90%, rgba(231, 228, 221, 0)100%);
    box-shadow:0px 0px 0px 0px #ffffff00;
    padding: 225px;
    border-radius: 0px;
    position: relative;
   
    text-shadow: 0px 0px 20px rgba(233, 233, 238, 7.5);
  }
}

